syntax = "proto3";

package grpc;

message Empty {}

message Note {
    string sendername = 1;
    string recipientname = 2; 
    string message = 3;
}

message LoginResponse{
    string result = 1 ;
}
message LoginRequest{
    string username = 1;
    string password = 2; 
}
message SignupRequest{
    string username = 1; 
    string password = 2; 
}
message SignupResponse{
    string result = 1;
}

service ChatServer {
    // This bi-directional stream makes it possible to send and receive Notes between 2 persons
    rpc ChatStream (Empty) returns (stream Note);
    rpc SendNote (Note) returns (Empty);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Signup(SignupRequest) returns (SignupResponse);
}
